--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,34 +1,35 @@
-<h1>Sign up</h1>
+<h1 align="center">Sign up</h1>
 
-<div class="center-block ">
-	<div class="col-md-4">
-		<%= form_for(@user) do |f| %>
-			<div class="form-group">
+<div class="col-md-4 col-md-offset-4">
+	<%= form_for(@user) do |f| %>
+		<%= render 'shared/error_messages' %>
+
+		<div class="form-group">
 			<%= f.label :student_number, "Student Number"%>
-			<%= f.text_field :student_number %>
-			</div>
+			<%= f.text_field :student_number, class: "form-control", placeholder: "Student number"%>
+		</div>
 
-			<div class="form-group">
+		<div class="form-group">
 			<%= f.label :name %>
-			<%= f.text_field :name %>
-			</div>
+			<%= f.text_field :name, class: "form-control", placeholder: "Name"%>
+		</div>
 
-			<div class="form-group">
+		<div class="form-group">
 			<%= f.label :email %>
-			<%= f.text_field :email %>
-			</div>
+			<%= f.text_field :email, class: "form-control", placeholder: "Email"%>
+		</div>
 
-			<div class="form-group">
+		<div class="form-group">
 			<%= f.label :password %>
-			<%= f.password_field :password %>
-			</div>
+			<%= f.password_field :password, class: "form-control", placeholder: "Password"%>
+		</div>
 
-			<div class="form-group">
+		<div class="form-group">
 			<%= f.label :password_confirmation, "Confirmation" %>
-			<%= f.password_field :password_confirmation %>
-			</div>
+			<%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirmation"%>
+		</div>
 
-			<%= f.submit "Sign up", class: "btn btn-large btn-primary" %>
-		<% end %>
-	</div>
+		<%= f.submit "Sign up", class: "btn btn-large btn-primary" %>
+		<%= link_to_function "Cancel", "history.back()", class: "btn btn-large btn-warning" %>
+	<% end %>
 </div>
