--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Bcheck</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-	<%= render 'layouts/header' %>
-	
-<div class="container">
-<%= yield %>
-</div>
+	<head>
+		<title>Bcheck</title>
+		<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+		<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+		<%= csrf_meta_tags %>
+	</head>
+	<body>
+		<%= render 'layouts/header' %>
 
-</body>
+		<div class="container">
+			<% flash.each do |key, value| %>
+				<div class="alert alert-<%= key %>" data-dismiss="alert"><%= value %></div>
+			<% end %>
+			<%= yield %>
+		</div>
+
+	</body>
 </html>
