--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,8 @@
 	</div>
 	<div class="navbar-collapse collapse">
 		<ul class="nav navbar-nav navbar-inverse navbar-right">
-			<% if signed_in? %>
+			<% if signed_in? %>	
+				<li><%= link_to current_user.email, "#"%></li>
 				<li><%= link_to "Sign out", signout_path, method: "delete" %></li>
 			<% else %>
 				<li><%= link_to "Sign in", signin_path %></li>
