--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<% @courses.each do |course| %>
+			<% current_user.registered_courses.each do |course| %>
 				<tr>
 					<td><%= course.code %></td>
 					<td><%= course.name %></td>
@@ -19,6 +19,7 @@
 			<% end %>
 		</tbody>
 	</table>
-	<div align="right">
+	<div align="center">
+		<%= link_to "Register new course", new_registration_path, class: "btn btn-primary" %>
 	</div>
 </div>
