--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bcheck</title>
+		<title><%= yield(:title) %></title>
 		<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 		<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 		<%= csrf_meta_tags %>
 	</head>
 	<body>
-		<%= render 'layouts/header' %>
+		<!--<%= render 'layouts/header' %>-->
 
 		<div class="container">
 			<% flash.each do |key, value| %>
 				<div class="alert alert-<%= key %>" data-dismiss="alert"><%= value %></div>
 			<% end %>
-			<%= yield %>
 		</div>
+			<%= yield %>
 
 	</body>
 </html>
