--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 		<%= csrf_meta_tags %>
 	</head>
 	<body>
-		<!--<%= render 'layouts/header' %>-->
+		<!--<%= link_to "Sign out", signout_path, method: "delete", class: "btn btn-primary" %>-->
 
 		<div class="container">
 			<% flash.each do |key, value| %>
