--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,15 @@
 <% provide(:title, "#{@course.code} #{@course.name}") %>
+	<div class="course-container container-fluid text-div">
+		<div class="col-xs-3">Instructor</div>
+		<div class="col-xs-8 content"><%= @course.instructor %></div>
+		<div class="col-xs-3">Career</div>
+		<div class="col-xs-8 content"><%= CAREER[@course.career] %></div>
+		<div class="col-xs-3">Type</div>
+		<div class="col-xs-8 content"><%= COURSE_TYPE[@course.course_type] %></div>
+		<div class="col-xs-3">Homepage</div>
+		<div class="col-xs-8 content"><%= @course.homepage %></div>
+</div>
+	<hr>
 
 <% if current_user.admin? %>
 	<% @course.registering_students.each do |user| %>
@@ -7,7 +18,7 @@
 				<div class="col-xs-3">
 					<%= user.student_number %>
 				</div>
-				<div class="col-xs-7">
+				<div class="col-xs-7" style="color:#444444">
 					<%= user.name %>
 				</div>
 				<div class="col-xs-1">
