--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,10 +7,16 @@
 		<div class="col-xs-3">Type</div>
 		<div class="col-xs-8 content"><%= COURSE_TYPE[@course.course_type] %></div>
 		<div class="col-xs-3">Homepage</div>
-		<div class="col-xs-8 content"><%= @course.homepage %></div>
+		<div class="col-xs-8 content"><%= link_to "Link", "http://#{@course.homepage}" %></div>
 </div>
-	<hr>
-
+<hr>
+<% if current_user.admin? %>
+	<!--
+	<div class="container"><%= link_to "Start attendance check", "#", id: "start-attendance-button", class: "btn btn-primary btn-lg" %></div>
+	-->
+	<div class="container"><%= link_to "Stop attendance check", "#", id: "start-attendance-button", class: "btn btn-warning btn-lg" %></div>
+		<% end %>
+		<hr/>
 <% if current_user.admin? %>
 	<% @course.registering_students.each do |user| %>
 		<%= link_to @course.registrations.find_by(user_id: user.id), target: :_top, class: "no-hover" do %>
